--- a/BlackJackProject/BlackJackWcfService/BlackJackWcfService.csproj
+++ b/BlackJackProject/BlackJackWcfService/BlackJackWcfService.csproj
@@ -46,12 +46,22 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IService1.cs" />
+    <Compile Include="IServiceBJ.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service1.cs" />
+    <Compile Include="ServiceBJ.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BJDataLevel\BJDataLevel.csproj">
+      <Project>{05cadc62-ed0c-4366-b07b-7849db474e0d}</Project>
+      <Name>BJDataLevel</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BJLogicLevel\BJLogicLevel.csproj">
+      <Project>{2d73a7f6-4112-48bf-a301-ebb50255b65b}</Project>
+      <Name>BJLogicLevel</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
