--- a/BlackJackProject/BlackJack/BlackJack.csproj
+++ b/BlackJackProject/BlackJack/BlackJack.csproj
@@ -58,13 +58,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="RegisterForm.xaml.cs">
-  <DependentUpon>RegisterForm.xaml</DependentUpon>
-</Compile>
-    <Compile Include="RoomToFindPlayer.xaml.cs">
+    <Compile Include="BJWindows\RegisterForm.xaml.cs">
+      <DependentUpon>RegisterForm.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="BJWindows\RoomToFindPlayer.xaml.cs">
       <DependentUpon>RoomToFindPlayer.xaml</DependentUpon>
     </Compile>
-    <Page Include="AuthWindow.xaml">
+    <Page Include="BJWindows\AuthWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -76,27 +76,26 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="AuthWindow.xaml.cs">
+    <Compile Include="BJWindows\AuthWindow.xaml.cs">
       <DependentUpon>AuthWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="RegisterForm.xaml">
-      
+    <Page Include="BJWindows\RegisterForm.xaml">
     </Page>
-    <Page Include="MenuWindow.xaml">
+    <Page Include="BJWindows\MenuWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="RoomToFindPlayer.xaml">
+    <Page Include="BJWindows\RoomToFindPlayer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MenuWindow.xaml.cs">
+    <Compile Include="BJWindows\MenuWindow.xaml.cs">
       <DependentUpon>MenuWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
