--- a/BlackJackProject/BlackJackWcfService/BlackJackWcfService.csproj
+++ b/BlackJackProject/BlackJackWcfService/BlackJackWcfService.csproj
@@ -46,12 +46,26 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IService1.cs" />
+    <Compile Include="GameLogic\GameCore.cs" />
+    <Compile Include="GameLogic\Room.cs" />
+    <Compile Include="Model\GamePlayer.cs" />
+    <Compile Include="Model\Player.cs" />
+    <Compile Include="Model\PlayerList.cs" />
+    <Compile Include="Service\IClientCallback.cs" />
+    <Compile Include="Service\IGameService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service1.cs" />
+    <Compile Include="Service\GameService.cs" />
+    <Compile Include="Service\ServerClientCallback.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App1 - Copy.config" />
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BJDataLevel\BJDataLevel.csproj">
+      <Project>{05cadc62-ed0c-4366-b07b-7849db474e0d}</Project>
+      <Name>BJDataLevel</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
