--- a/BlackJackProject/BlackJackWcfService/App.config
+++ b/BlackJackProject/BlackJackWcfService/App.config
@@ -12,8 +12,8 @@
       <service name="BlackJackWcfService.GameService">
         <host>
           <baseAddresses>
-            <!--<add baseAddress = "net.tcp://10.6.6.39:2017/BlackJackWcfService/Service1/" />-->
-            <add baseAddress = "net.tcp://localhost:2017/BlackJackWcfService/Service1/" />
+            <add baseAddress = "net.tcp://10.6.6.104:4042/BlackJackWcfService/Service1/" />
+            <!--<add baseAddress = "net.tcp://localhost:2017/BlackJackWcfService/Service1/" />-->
           </baseAddresses>
         </host>
         <endpoint address="" binding="netTcpBinding" contract="BlackJackWcfService.IGameService" />
