--- a/BlackJackProject/BlackJack/App.config
+++ b/BlackJackProject/BlackJack/App.config
@@ -10,11 +10,11 @@
             </netTcpBinding>
         </bindings>
         <client>
-            <endpoint address="net.tcp://10.6.6.104:4042/BlackJackWcfService/Service1/"
+            <endpoint address="net.tcp://localhost:2017/BlackJackWcfService/Service1/"
                 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IGameService"
                 contract="GameService.IGameService" name="NetTcpBinding_IGameService">
                 <identity>
-                    <userPrincipalName value="xvII@step.edu" />
+                    <userPrincipalName value="SILVERPC\HpSilver" />
                 </identity>
             </endpoint>
         </client>
