--- a/BlackJackProject/BlackJackWcfService/App.config
+++ b/BlackJackProject/BlackJackWcfService/App.config
@@ -1,6 +1,9 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
@@ -12,21 +15,34 @@
       <service name="BlackJackWcfService.GameService">
         <host>
           <baseAddresses>
-            <add baseAddress = "net.tcp://10.6.6.104:4042/BlackJackWcfService/Service1/" />
-            <!--<add baseAddress = "net.tcp://localhost:2017/BlackJackWcfService/Service1/" />-->
+            <!--<add baseAddress = "net.tcp://10.6.6.104:4042/BlackJackWcfService/Service1/" />-->
+            <add baseAddress="net.tcp://localhost:2017/BlackJackWcfService/Service1/" />
           </baseAddresses>
         </host>
         <endpoint address="" binding="netTcpBinding" contract="BlackJackWcfService.IGameService" />
-        <endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange"/>
+        <endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange" />
       </service>
     </services>
     <behaviors>
       <serviceBehaviors>
         <behavior>
-          <serviceMetadata httpGetEnabled="False" httpsGetEnabled="False"/>
+          <serviceMetadata httpGetEnabled="False" httpsGetEnabled="False" />
           <serviceDebug includeExceptionDetailInFaults="False" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
   </system.serviceModel>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+  <connectionStrings>
+    <add name="BJContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=BJDataLevel.Model.BJContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
