--- a/BlackJackProject/BlackJackWcfService/BlackJackWcfService.csproj
+++ b/BlackJackProject/BlackJackWcfService/BlackJackWcfService.csproj
@@ -57,6 +57,9 @@
   <ItemGroup>
     <Compile Include="GameLogic\GameCore.cs" />
     <Compile Include="GameLogic\Room.cs" />
+    <Compile Include="Model\Ccard.cs" />
+    <Compile Include="Model\CDeck.cs" />
+    <Compile Include="Model\enums.cs" />
     <Compile Include="Model\GamePlayer.cs" />
     <Compile Include="Model\Player.cs" />
     <Compile Include="Model\PlayerList.cs" />
