--- a/BlackJackProject/BlackJack/BlackJack.csproj
+++ b/BlackJackProject/BlackJack/BlackJack.csproj
@@ -60,6 +60,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="BJService\ServiceProvider.cs" />
     <Compile Include="BJWindows\RegisterForm.xaml.cs">
       <DependentUpon>RegisterForm.xaml</DependentUpon>
     </Compile>
