--- a/BlackJackProject/BlackJack/App.config
+++ b/BlackJackProject/BlackJack/App.config
@@ -4,19 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
     <system.serviceModel>
-        <bindings>
-            <netTcpBinding>
-                <binding name="NetTcpBinding_IGameService" />
-            </netTcpBinding>
-        </bindings>
-        <client>
-            <endpoint address="net.tcp://localhost:2017/BlackJackWcfService/Service1/"
-                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IGameService"
-                contract="GameService.IGameService" name="NetTcpBinding_IGameService">
-                <identity>
-                    <userPrincipalName value="SILVERPC\HpSilver" />
-                </identity>
-            </endpoint>
-        </client>
+        <bindings />
+        <client />
     </system.serviceModel>
 </configuration>
