--- a/BlackJackProject/BlackJack/App.config
+++ b/BlackJackProject/BlackJack/App.config
@@ -4,7 +4,35 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
     <system.serviceModel>
-        <bindings />
-        <client />
+        <bindings>
+            <netTcpBinding>
+                <binding name="NetTcpBinding_IGameService" />
+                <binding name="NetTcpBinding_IGameService1" />
+                <binding name="NetTcpBinding_IGameService2" />
+            </netTcpBinding>
+        </bindings>
+        <client>
+            <endpoint address="net.tcp://10.6.6.15:4042/BlackJackWcfService/Service1/"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IGameService"
+                contract="BlackJackService.IGameService" name="NetTcpBinding_IGameService">
+                <identity>
+                    <userPrincipalName value="xvII@step.edu" />
+                </identity>
+            </endpoint>
+            <endpoint address="net.tcp://10.6.6.15:4042/BlackJackWcfService/Service1/"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IGameService1"
+                contract="ServiceReference1.IGameService" name="NetTcpBinding_IGameService1">
+                <identity>
+                    <userPrincipalName value="xvII@step.edu" />
+                </identity>
+            </endpoint>
+            <endpoint address="net.tcp://10.6.6.15:4042/BlackJackWcfService/Service1/"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IGameService2"
+                contract="ServiceReference2.IGameService" name="NetTcpBinding_IGameService2">
+                <identity>
+                    <userPrincipalName value="xvII@step.edu" />
+                </identity>
+            </endpoint>
+        </client>
     </system.serviceModel>
 </configuration>
