--- a/BlackJackProject/BlackJack/App.config
+++ b/BlackJackProject/BlackJack/App.config
@@ -9,6 +9,7 @@
                 <binding name="NetTcpBinding_IGameService" />
                 <binding name="NetTcpBinding_IGameService1" />
                 <binding name="NetTcpBinding_IGameService2" />
+                <binding name="NetTcpBinding_IGameService3" />
             </netTcpBinding>
         </bindings>
         <client>
@@ -31,6 +32,13 @@
                 contract="ServiceReference2.IGameService" name="NetTcpBinding_IGameService2">
                 <identity>
                     <userPrincipalName value="xvII@step.edu" />
+                </identity>
+            </endpoint>
+            <endpoint address="net.tcp://localhost:2017/BlackJackWcfService/Service1/"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IGameService3"
+                contract="GameService.IGameService" name="NetTcpBinding_IGameService3">
+                <identity>
+                    <userPrincipalName value="Xeon\Base" />
                 </identity>
             </endpoint>
         </client>
