--- a/BlackJackProject/BlackJackWcfService/BlackJackWcfService.csproj
+++ b/BlackJackProject/BlackJackWcfService/BlackJackWcfService.csproj
@@ -55,6 +55,11 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameLogic\GameCore.cs" />
+    <Compile Include="GameLogic\Room.cs" />
+    <Compile Include="Model\GamePlayer.cs" />
+    <Compile Include="Model\Player.cs" />
+    <Compile Include="Model\PlayerList.cs" />
     <Compile Include="Service\IClientCallback.cs" />
     <Compile Include="Service\IGameService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
