--- a/BlackJackProject/BlackJack/BlackJack.csproj
+++ b/BlackJackProject/BlackJack/BlackJack.csproj
@@ -135,6 +135,9 @@
     <None Include="Service References\GameService\Arrays.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Service References\GameService\BlackJack.GameService.PlayerList.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Service References\GameService\BlackJackWcfService.Model.xsd">
       <SubType>Designer</SubType>
     </None>
@@ -166,6 +169,12 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BJDataLevel\BJDataLevel.csproj">
+      <Project>{05CADC62-ED0C-4366-B07B-7849DB474E0D}</Project>
+      <Name>BJDataLevel</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
