--- a/BlackJackProject/BlackJackWcfService/App.config
+++ b/BlackJackProject/BlackJackWcfService/App.config
@@ -26,8 +26,8 @@
       <service name="BlackJackWcfService.GameService">
         <host>
           <baseAddresses>
-            <!--<add baseAddress = "net.tcp://10.6.6.15:4042/BlackJackWcfService/Service1/" />-->
-            <add baseAddress="net.tcp://localhost:2017/BlackJackWcfService/Service1/" />
+            <add baseAddress = "net.tcp://10.6.0.100:4042/BlackJackWcfService/Service1/" />
+            <!--<add baseAddress="net.tcp://localhost:2017/BlackJackWcfService/Service1/" />-->
           </baseAddresses>
         </host>
         <endpoint address="" binding="netTcpBinding" contract="BlackJackWcfService.IGameService" />
