--- a/BlackJackProject/BlackJack/App.config
+++ b/BlackJackProject/BlackJack/App.config
@@ -34,11 +34,11 @@
                     <userPrincipalName value="xvII@step.edu" />
                 </identity>
             </endpoint>
-            <endpoint address="net.tcp://localhost:2017/BlackJackWcfService/Service1/"
+            <endpoint address="net.tcp://10.6.0.100:4042/BlackJackWcfService/Service1/"
                 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IGameService3"
                 contract="GameService.IGameService" name="NetTcpBinding_IGameService3">
                 <identity>
-                    <userPrincipalName value="Xeon\Base" />
+                    <userPrincipalName value="26113@step.edu" />
                 </identity>
             </endpoint>
         </client>
