--- a/BlackJackProject/BlackJack/App.config
+++ b/BlackJackProject/BlackJack/App.config
@@ -38,7 +38,7 @@
                 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IGameService3"
                 contract="GameService.IGameService" name="NetTcpBinding_IGameService3">
                 <identity>
-                    <userPrincipalName value="26113@step.edu" />
+                    <userPrincipalName value="xvII@step.edu" />
                 </identity>
             </endpoint>
         </client>
