--- a/BlackJackProject/BlackJack/App.config
+++ b/BlackJackProject/BlackJack/App.config
@@ -9,6 +9,7 @@
                 <binding name="NetTcpBinding_IGameService" />
                 <binding name="NetTcpBinding_IGameService1" />
                 <binding name="NetTcpBinding_IGameService2" />
+                <binding name="NetTcpBinding_IGameService3" />
             </netTcpBinding>
         </bindings>
         <client>
@@ -29,6 +30,13 @@
             <endpoint address="net.tcp://10.6.6.15:4042/BlackJackWcfService/Service1/"
                 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IGameService2"
                 contract="ServiceReference2.IGameService" name="NetTcpBinding_IGameService2">
+                <identity>
+                    <userPrincipalName value="xvII@step.edu" />
+                </identity>
+            </endpoint>
+            <endpoint address="net.tcp://10.6.6.95:4042/BlackJackWcfService/Service1/"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IGameService3"
+                contract="ServiceReference.IGameService" name="NetTcpBinding_IGameService3">
                 <identity>
                     <userPrincipalName value="xvII@step.edu" />
                 </identity>
