тест не рабочий

--- a/BlackJackProject/BJLogicLevel/BJLogicLevel.csproj
+++ b/BlackJackProject/BJLogicLevel/BJLogicLevel.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Model\enums.cs" />
     <Compile Include="Model\GamePlayer.cs" />
     <Compile Include="Model\GamesRoom.cs" />
+    <Compile Include="Model\inglton.cs" />
     <Compile Include="Model\Player.cs" />
     <Compile Include="Model\PlayerList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -55,10 +56,6 @@
     <ProjectReference Include="..\BJDataLevel\BJDataLevel.csproj">
       <Project>{05cadc62-ed0c-4366-b07b-7849db474e0d}</Project>
       <Name>BJDataLevel</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\BlackJack\BlackJack.csproj">
-      <Project>{36e0b620-4798-47f8-ad95-7476dd422904}</Project>
-      <Name>BlackJack</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
