--- a/BlackJackProject/BlackJack/BlackJack.csproj
+++ b/BlackJackProject/BlackJack/BlackJack.csproj
@@ -89,6 +89,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="View\Gamer.cs" />
     <Page Include="BJWindows\AuthWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
