--- a/BlackJackProject/BlackJack/App.config
+++ b/BlackJackProject/BlackJack/App.config
@@ -1,50 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
-    </startup>
-    <system.serviceModel>
-        <bindings>
-            <netTcpBinding>
-                <binding name="NetTcpBinding_IGameService" />
-                <binding name="NetTcpBinding_IGameService1" />
-                <binding name="NetTcpBinding_IGameService2" />
-                <binding name="NetTcpBinding_IGameService3" />
-            </netTcpBinding>
-        </bindings>
-        <client>
-            <endpoint address="net.tcp://10.6.6.32:4042/BlackJackWcfService/Service1/"
-                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IGameService"
-                contract="BlackJackService.IGameService" name="NetTcpBinding_IGameService">
-                <identity>
-                    <userPrincipalName value="xvII@step.edu" />
-                </identity>
-            </endpoint>
-            <endpoint address="net.tcp://10.6.6.15:4042/BlackJackWcfService/Service1/"
-                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IGameService1"
-                contract="ServiceReference1.IGameService" name="NetTcpBinding_IGameService1">
-                <identity>
-                    <userPrincipalName value="xvII@step.edu" />
-                </identity>
-            </endpoint>
-            <endpoint address="net.tcp://10.6.6.15:4042/BlackJackWcfService/Service1/"
-                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IGameService2"
-                contract="ServiceReference2.IGameService" name="NetTcpBinding_IGameService2">
-                <identity>
-                    <userPrincipalName value="xvII@step.edu" />
-                </identity>
-            </endpoint>
-<<<<<<< HEAD
-            <endpoint address="net.tcp://localhost:2017/BlackJackWcfService/Service1/"
-=======
-            <endpoint address="net.tcp://10.6.6.95:4042/BlackJackWcfService/Service1/"
->>>>>>> develop
-                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IGameService3"
-                contract="ServiceReference.IGameService" name="NetTcpBinding_IGameService3">
-                <identity>
-                    <userPrincipalName value="xvII@step.edu" />
-                </identity>
-            </endpoint>
-        </client>
-    </system.serviceModel>
+  <configSections>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <connectionStrings>
+    <add name="BJContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=BJDataLevel.Model.BJContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+  <system.serviceModel>
+    <bindings>
+      <netTcpBinding>
+        <binding name="NetTcpBinding_IGameService" />
+      </netTcpBinding>
+    </bindings>
+    <client>
+      <endpoint address="net.tcp://localhost:2017/BlackJackWcfService/Service1/"
+        binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IGameService"
+        contract="ServiceReference.IGameService" name="NetTcpBinding_IGameService">
+        <identity>
+          <userPrincipalName value="xvII@step.edu" />
+        </identity>
+      </endpoint>
+    </client>
+  </system.serviceModel>
 </configuration>
